--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>WEEK 6 AJAX TEST</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+   <link href="dev/flickity.css" rel="stylesheet">
+    <script src="./dev/flickity.js"></script>
     <script src="./dev/scripts/script.js"></script>
+    <link rel="stylesheet" href="dev/style.css">
 </head>
 <body>
     <p>blahblah</p>
@@ -13,7 +16,34 @@
     <button id="submit-button" type="button">SUBMIT</button>
     <button id="show-authors" type="button">SHOW AUTHORS</button>
     <!--<button id="get-books" type="button">GET BOOKS</button>-->
-    <ul id="author-list"></ul>
+ <ul id="author-list"></ul>
     <ul id="book-list"></ul>
+
+    <div id="carousel">
+        <div class="carousel-one">
+            <img src="dev/images/book.jpg">
+        </div>
+        <div class="carousel-one">
+           <img src="dev/images/book2.jpg">
+        </div>
+        <div class="carousel-one">
+           <img src="dev/images/book3.jpg">
+        </div>
+        <div class="carousel-one">
+          <img src="dev/images/book4.jpg">
+        </div>
+        <div class="carousel-one">
+            <img src="dev/images/book5.jpg">
+        </div>
+    </div>
+
+
+
+
+   
+
+
+
+  
 </body>
 </html>
