--- a/index.html
+++ b/index.html
@@ -5,45 +5,23 @@
     <title>WEEK 6 AJAX TEST</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-   <link href="dev/flickity.css" rel="stylesheet">
-    <script src="./dev/flickity.js"></script>
+ 
     <script src="./dev/scripts/script.js"></script>
 
-    <link rel="stylesheet" href="dev/style.css">
+   <!--  <link rel="stylesheet" href="dev/style.css"> -->
 
     <link rel="stylesheet" href="dev/styles/kelvin-style.css">
 </head>
 <body>
-    <p>blahblah</p>
+   
+    <p>blahblahdsf</p>
     <input id="input" type="text">
     <button id="submit-button" type="button">SUBMIT</button>
     <button id="show-authors" type="button">SHOW AUTHORS</button>
     <!--<button id="get-books" type="button">GET BOOKS</button>-->
- <ul id="author-list"></ul>
+    <ul id="author-list"></ul>
     <ul id="book-list"></ul>
-
-
-    <!-- <div id="carousel">
-        <div class="carousel-one">
-            <img src="dev/images/book.jpg">
-        </div>
-        <div class="carousel-one">
-           <img src="dev/images/book2.jpg">
-        </div>
-        <div class="carousel-one">
-           <img src="dev/images/book3.jpg">
-        </div>
-        <div class="carousel-one">
-          <img src="dev/images/book4.jpg">
-        </div>
-        <div class="carousel-one">
-            <img src="dev/images/book5.jpg">
-        </div>
-    </div>
- -->
-
-
-  
+    
     <div class="book-overlay">
         <p class="book-title">title</p>
         <img class="book-image" src="" alt="">
@@ -52,7 +30,7 @@
         <p class="book-date">date</p>
         <button class="book-button" type="button">close</button>
     </div>
-
+   
 
 </body>
 </html>
